--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,6 @@
     },
     "scripts": {
         "build": "npx tsc",
-        "start": "node dist/index.js
+        "start": "node dist/index.js"
     }
 }
