--- a/www/package.json
+++ b/www/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "www",
-    "version": "1.0.0",
-    "dependencies": {
-        "express": "^4.18.1"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.13",
-        "@types/node": "^18.0.3",
-        "typescript": "^4.7.4"
-    },
-    "scripts": {
-        "build": "npx tsc",
-        "start": "node dist/index.js"
-    }
+  "name": "www",
+  "version": "1.0.0",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.3",
+    "typescript": "^4.7.4"
+  },
+  "scripts": {
+    "build": "npx tsc && non_existant_command",
+    "start": "node dist/index.js"
+  }
 }
