--- a/www/package.json
+++ b/www/package.json
@@ -10,7 +10,7 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc && non_existent_command",
     "start": "node dist/index.js"
   }
 }
